--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,6 @@
 @import './pages/login.scss';
-@import './pages/registry.scss';
+@import './pages/dash.scss';
+// @use 'login.scss';no sirve asi y no se por que 
 
 
 *{
