--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,4 +1,4 @@
-/* variables */
+/* colors */
 /* Herencias */
 .login {
   width: 100%;
@@ -155,17 +155,10 @@
   }
 }
 
-.divRegistry {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+.dashboard {
+  background-color: white;
+  width: 100vw;
+  height: 100vh;
 }
 
 * {
