--- a/src/styles/pages/dash.css
+++ b/src/styles/pages/dash.css
@@ -1,18 +1,31 @@
-.header {
-  background-color: #1900ff;
-  width: 100%;
-  height: 30px;
-}
-
-.header__container {
-  background-color: black;
-  width: 300px;
-  height: 300px;
-}
-
 .dashboard {
   background-color: white;
   width: 100vw;
-  height: 100vh;
+  height: auto;
+}
+
+.divTest {
+  width: 200px;
+  height: 580px;
+  margin-bottom: 15px;
+  background-color: violet;
+}
+
+.menu__btn {
+  width: 50px;
+  height: 50px;
+  background-color: rgba(139, 0, 139, 0.201);
+  right: 0;
+  position: absolute;
+  top: 0;
+}
+
+.menu__btn22 {
+  width: 50px;
+  height: 50px;
+  background-color: rgba(44, 139, 0, 0.201);
+  right: 50px;
+  position: absolute;
+  top: 0;
 }
 /*# sourceMappingURL=dash.css.map */
