--- a/src/styles/pages/dash.scss
+++ b/src/styles/pages/dash.scss
@@ -1,31 +1,61 @@
 
 .dashboard {
-    background-color:white;
+    background-color:#F7F8FC;
     width: 100vw;
-    height: auto;
+    height: 100vh;
+    overflow: hidden;
 }
 
-.divTest{
-    width: 200px;
-    height: 580px;
-    margin-bottom: 15px;
-    background-color: violet;
-}
-.menu__btn{
+.btnOpenMenu {
     width: 50px;
     height: 50px;
-    background-color: rgba(139, 0, 139, 0.201);
+    position: absolute;
+    top:0;
     right: 0;
-    position: absolute;
-    
-    top: 0;
+
 }
-.menu__btn22{
-    width: 150px;
-    height: 150px;
-    background-color: rgba(2, 2, 2, 0.749);
-    right: 50px;
-    position: absolute;
-    
-    top: 0;
+.dash__container {
+    background-color: rgba(137, 43, 226, 0.174);
+    width: 100vw;
+    height: 100vh;
+    margin-left: 270px;
+    margin-top: 50px;
+}
+.container__div {
+    width: 100vw;
+    margin-bottom: 5px;
+}
+.divUserInf{
+    display: flex;
+}
+.divUserInf > h1 {
+    width: 30%;
+    // background-color: cornsilk;
+}
+.divUserInf > div {
+    width: 70%;
+    background-color: rgba(0, 0, 0, 0.315);;
+}
+.divProgressBar{
+    background-color: rgba(140, 10, 101, 0.329);
+}
+.divProgressBar > div{
+    display: inline-block;
+    margin-right: 2px;
+
+    background-color: rgba(140, 10, 101, 0.719);
+    width: 20%;
+}
+.divProgressBar > div > span{
+    color: darkblue;
+}
+.divProgressBar > div > div{
+    height: 30px;
+    border-radius: 3px;
+    background-color: rgb(213, 228, 228);
+
+}
+.divBoard{
+    background-color: floralwhite;
+    height: 200px;
 }
