add files views-dash

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,8 @@
-@import './pages/login.scss';
+@import './pages/views-dash/preparacion.scss';
 @import './pages/dash.scss';
+@import './pages/login.scss';
 @import './menu.scss';
+
 
 *{
     padding: 0;
