switch to changes view-dash

--- a/src/styles/pages/views-dash/tramite.scss
+++ b/src/styles/pages/views-dash/tramite.scss
@@ -1,5 +1,5 @@
-.PreparationContainer{
+.tramiteContainer{
     background-color: black;
-    height: 300px;
+    height: 100px;
     width:200px;
 }
