--- a/src/styles/pages/components-dash/views-dash/promocion.scss
+++ b/src/styles/pages/components-dash/views-dash/promocion.scss
@@ -1,3 +1,51 @@
-.promo__container{
-    
+.promoContainer {
+    position: relative;
+    //margin-bottom: 100px;
+    padding: 60px 5rem;
+    height: auto;
+    min-width: 300px;
+    font-size: 1.8rem;
+    line-height: 4.4rem;
+    scroll-snap-align: center;
+    //background-color: rgb(153, 211, 208);
+
 }
+.promoDescription {
+    display: flex;
+    flex-direction: column;
+    // background-color: pink;
+}
+.promoImage {
+    // background-color: lightblue;
+    max-width: 500px;
+    margin:auto;
+}
+.promoImage img {
+    width: 100%;
+    height: auto;
+}
+.promoDescription h2 {
+    margin: 30px 0;
+    font-size: 3.8rem;
+    font-weight: bold;
+    color:black;
+}
+li {
+    font-weight: bold;
+}
+li span {
+    font-weight: 400;
+}
+@media screen and(min-width:499px) {
+    .promoContainer {
+        padding: 80px 4rem;
+    }
+}
+@media screen and(min-width:767px) {
+    .promoContainer {
+        padding: 80px 9rem;
+    }
+}
+
+
+
