--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -1,72 +1,96 @@
 $menu-background:rgba(35, 31, 32, 1);
 $share-width: 100%;
 $share-heigth: 50%;
-.header {
-    background-color: $menu-background;
-    width: 100%;
-    min-width: 222px;
-    height: 100px;
+.menu {
     position: relative;
     position: fixed;
-    top: 83vh;
     z-index: 100;
+    height: 109px;
+    width: 100%;
+    min-width: 320px;
+    max-width: 400px;
+    top: calc(100vh - 109px);
+    background-color: $menu-background;
 }
-.menu {
+.container {
+    flex-direction: column-reverse;
     height: inherit;
     display: flex;
-    flex-direction: column-reverse;
-
-    .menu__containerLogoTz {
+    .logoTz {
         display: none;
     }
-    .menu__containerLogo {
-        max-width: 140px;
-        height: 50px;
+    .letterLogo {
         display: flex;
         flex-direction: row;
         align-self: center;
-
-        .menu__logo {
+        max-width: 110px;
+        height: 70%;
+        .letterLogo__img {
             width: 100%;
             height: 100%;
         }
     }
-    .menu__nav {
-        width: $share-width;
-        height: 50px;
-        padding-top: 12px;
+    .nav {
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
+        width: $share-width;
+        height: 30%;
+        margin-bottom: 10px;
+        li {
+            display: flex;
+            width: 20%;
+            background-color: lightcyan;
+            font-size: 1rem;
+            img {
+                width: 10px;
+            }
 
-        .nav__group1 > a , .nav__group2 > a , .nav__group3 > a , .nav__group4 > a {
-            display: none;
+            a {
+                display: none;// only in vertical menu
+            }
+        }
+        .nav__li1 {
+            width: 38%;
+            background-color: yellowgreen;
+        }
+        .nav__li1  a {
+            display:block;
+
         }
     }
 }
+
+
+
 // *** media tablet ***
-@media screen and(min-width:667px) {
-    .header{
+//@media screen and(min-width:667px)
+/*
+*a partir de los 400px el menu debe de ser vertical
+*/
+
+@media screen and(min-width:400px) {
+    .menu {
+        top: 0;
+        left: 0;
         width: 250px;
         height: 100vh;
         padding-top: 2%;
-        top: 0;
-        left: 0;
         transition-duration:  1s;
     }
-    .menu {
-        height: 100%;
+    .container {
         display: flex;
         flex-direction: column;
+        height: 100%;
+        }
         .menu__btn{
-            width: 50px;
-            height: 50px;
-            background: transparent;
-            border-style: none;
             right: 0;
             position: absolute;
             top: 15px;
             z-index: 100;
+            width: 50px;
+            height: 50px;
+            background: transparent;
+            border-style: none;
         }
         .menu__btn-icon {
             display: none;
@@ -79,50 +103,50 @@ $share-heigth: 50%;
                 transition:1s ease-in-out ;
             }
         }
-        .menu__containerLogoTz {
+        .logoTz {
             display: block;
-            height: 17%;
             display: flex;
             justify-content: center;
+            height: 17%;
             // background-color: rgba(245, 241, 35, 0.407);
-            .menu__logoTz {
+            logoTz__img {
                 width:auto;
                 height:100%;
             }
         }
-        .menu__nav {
-            height: 45%;
-            padding-top: 4%;
+        .nav {
             flex-direction: column;
             align-items: flex-start;
             justify-content: start;
-            // background-color: rgba(173, 216, 230, 0.448);
-            .nav__group1 , .nav__group2 , .nav__group3  , .nav__group4 {
+            height: 45%;
+            padding-top: 4%;
+            background-color: rgba(173, 216, 230, 0.448);
+            .nav__li {
                 // height: 78px;
+                display: flex;
+                align-items: center;
                 height: 20%;
                 width: inherit;
                 padding-left: 7%;
                 margin-bottom: 1px;
-                display: flex;
-                align-items: center;
                 // background-color: rgba(182, 53, 53, 0.461);
             }
-            .nav__group1 > a , .nav__group2 > a , .nav__group3 > a , .nav__group4 > a { 
+            .nav__li > a {
                 display: inline-block;
                 color: rgba(255, 255, 255, 0.653);
                 font-family: sans-serif;
                 font-weight: lighter;
             }
-            .menu__icon {
+            .nav_icon {
                 margin-right: 12px;
             }
         }
-        .menu__containerLogo {
+        .letterLogo {
             height: 15%;
             max-width: 180px;
             margin: 20% 0;
             // background-color: blue;
         }
     }
-};
+
 
