--- a/src/styles/pages/components-dash/views-dash/tramite.scss
+++ b/src/styles/pages/components-dash/views-dash/tramite.scss
@@ -1,3 +1,29 @@
 .tramite__container{
-   
+    padding: 40px  1rem;
+    height: auto;
+    margin-bottom: 100px;
+    font-size: 1.8rem;
+    line-height: 4rem;
+    text-align: justify;
+
+    position: relative;
+    min-width: 300px;
+    background-color: rgb(92, 184, 226);
+    scroll-snap-align: center;
+    // margin-right: 50%;
+
+}
+.tramite__image img {
+    width: 100%;
+    height: 100%;
+}
+.tramite__description h2 {
+    text-align: center;
+    margin: 30px 0;
+    font-weight: bold;
+}
+.tramite__description {
+    display: flex;
+    flex-direction: column;
+    padding: 0 18px;
 }
