--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -1,152 +1,167 @@
 $menu-background:rgba(35, 31, 32, 1);
 $share-width: 100%;
 $share-heigth: 50%;
+
 .menu {
     position: relative;
     position: fixed;
     z-index: 100;
     height: 109px;
     width: 100%;
-    min-width: 320px;
-    max-width: 400px;
+    //min-width: 275px;
     top: calc(100vh - 109px);
     background-color: $menu-background;
-}
-.container {
-    flex-direction: column-reverse;
-    height: inherit;
-    display: flex;
-    .logoTz {
-        display: none;
-    }
-    .letterLogo {
+        .menu__container {
         display: flex;
-        flex-direction: row;
-        align-self: center;
-        max-width: 110px;
-        height: 70%;
-        .letterLogo__img {
-            width: 100%;
-            height: 100%;
-        }
-    }
-    .nav {
-        display: flex;
-        flex-direction: row;
-        width: $share-width;
-        height: 30%;
-        margin-bottom: 10px;
-        li {
-            display: flex;
-            width: 20%;
-            background-color: lightcyan;
-            font-size: 1rem;
-            img {
-                width: 10px;
+        flex-direction: column-reverse;
+        height: inherit;
+            .btnCloseMenu { // only in vertical menu
+                display: none;
             }
-
-            a {
-                display: none;// only in vertical menu
+            .logoTz {      // only in vertical menu
+                display: none;
             }
-        }
-        .nav__li1 {
-            width: 38%;
-            background-color: yellowgreen;
-        }
-        .nav__li1  a {
-            display:block;
-
-        }
+            .letterLogo {
+                display: flex;
+                align-self: center;
+                position: relative;
+                overflow: hidden;
+                width: 137px;
+                height: 50%;
+                    .letterLogo__img {
+                        position:absolute;
+                        bottom:-20px;
+                        width: 100%;
+                        height: 150%;
+                    }
+            }
+            .nav {
+                display: flex;
+                flex-direction: row;
+                width: $share-width;
+                height: 50%;
+                    li {
+                        display: flex;
+                        justify-content: center;
+                        width: 30%;
+                        font-family: 'Mulish', sans-serif;
+                        font-size: 1.6rem;
+                        font-weight: lighter;
+                        letter-spacing: 0.2px;
+                        color: #DDE2FF;
+                        padding-bottom: 3%;
+                            img {
+                                width: 16px;
+                            }
+                            a {
+                                display: none; // only in vertical menu
+                            }
+                    }
+                    // .nav__li1 firs <li> item
+                    .nav__li1 {
+                        width: 70%;
+                        display: flex;
+                        align-items: center;
+                        background: rgba(221, 226, 255, 0.205);
+                        a {
+                            display:block;
+                        }
+                    }
+                    .nav__li1 img {
+                        margin-right: 4%;
+                    }
+            }
     }
 }
 
 
 
-// *** media tablet ***
-//@media screen and(min-width:667px)
+
+
 /*
-*a partir de los 400px el menu debe de ser vertical
+* since 499px the menu must be vertical
 */
 
-@media screen and(min-width:400px) {
+@media screen and(min-width:499px) {
     .menu {
         top: 0;
-        left: 0;
-        width: 250px;
+        left: -275px;
+        width: 275px;
         height: 100vh;
         padding-top: 2%;
         transition-duration:  1s;
-    }
-    .container {
-        display: flex;
-        flex-direction: column;
-        height: 100%;
-        }
-        .menu__btn{
-            right: 0;
-            position: absolute;
-            top: 15px;
-            z-index: 100;
-            width: 50px;
-            height: 50px;
-            background: transparent;
-            border-style: none;
-        }
-        .menu__btn-icon {
-            display: none;
-        }
-        .menu__btn:hover {
-            .menu__btn-icon{
-                display: block;
-                background-color: rgba(255, 255, 255, 0.201);
-                width: 30px;
-                transition:1s ease-in-out ;
-            }
-        }
-        .logoTz {
-            display: block;
-            display: flex;
-            justify-content: center;
-            height: 17%;
-            // background-color: rgba(245, 241, 35, 0.407);
-            logoTz__img {
-                width:auto;
-                height:100%;
-            }
-        }
-        .nav {
-            flex-direction: column;
-            align-items: flex-start;
-            justify-content: start;
-            height: 45%;
-            padding-top: 4%;
-            background-color: rgba(173, 216, 230, 0.448);
-            .nav__li {
-                // height: 78px;
+            .menu__container {
                 display: flex;
-                align-items: center;
-                height: 20%;
-                width: inherit;
-                padding-left: 7%;
-                margin-bottom: 1px;
-                // background-color: rgba(182, 53, 53, 0.461);
+                flex-direction: column;
+                height: 100%;
+                padding: 42px 0;
+                    .btnCloseMenu {  // only in vertical menu
+                        display: block;
+                        position: absolute;
+                        top: 4%;
+                        right: 8%;
+                        width: 15px;
+                        //background-color: lavenderblush;
+                    }
+                    .logoTz {   // only in vertical menu
+                        display: block;
+                        height: 120px;
+                        width: 120px;
+                        align-self: center;
+                        margin-bottom: 14px;
+                            .logoTz__img {
+                                width: 100%;
+                                height: 100%;
+                            }
+                    }
+                    .nav {
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: space-between;
+                        width: 100%;
+                        height: 270px;
+                        margin-bottom: 85px;
+                            li:hover {
+                                background: rgba(221, 226, 255, 0.205);
+                            }
+                            li {
+                                width: inherit;
+                                height: 59px;
+                                justify-content: start;
+                                align-items: center;
+                                padding-left: 35px;
+                                    img {
+                                        margin-right: 6%;
+                                    }
+                                    .nav__li1 img {
+                                        margin-right: 6%;
+                                    }
+                                    a {
+                                        display: block; // only in vertical menu
+                                    }
+                            }
+                            .nav__li1 {
+                                width: 100%;
+                                display: flex;
+                                align-items: center;
+                                background: rgba(221, 226, 255, 0.205);
+                            }
+                    }
+                    .letterLogo {
+                        width: 163px;
+                        height: 87px;
+                    }
             }
-            .nav__li > a {
-                display: inline-block;
-                color: rgba(255, 255, 255, 0.653);
-                font-family: sans-serif;
-                font-weight: lighter;
-            }
-            .nav_icon {
-                margin-right: 12px;
-            }
-        }
-        .letterLogo {
-            height: 15%;
-            max-width: 180px;
-            margin: 20% 0;
-            // background-color: blue;
-        }
     }
+}
+@media screen and(min-width:1024px) {
+    .menu {
+        left: 0;
+        .menu__container {
+            .btnCloseMenu {
+                display: none;
+            }
+        }
 
-
+    }
+}
