--- a/src/styles/pages/components-dash/views-dash/promocion.scss
+++ b/src/styles/pages/components-dash/views-dash/promocion.scss
@@ -1,22 +1,21 @@
 .promoContainer {
     position: relative;
-    //margin-bottom: 100px;
     padding: 60px 5rem;
     height: auto;
     min-width: 300px;
     font-size: 1.8rem;
     line-height: 4.4rem;
-    scroll-snap-align: center;
+    //scroll-snap-align: center;
     //background-color: rgb(153, 211, 208);
 
 }
 .promoDescription {
     display: flex;
     flex-direction: column;
-    // background-color: pink;
+    //background-color: rgb(209, 238, 130);
 }
 .promoImage {
-    // background-color: lightblue;
+    //background-color: lightblue;
     max-width: 500px;
     margin:auto;
 }
@@ -26,7 +25,7 @@
 }
 .promoDescription h2 {
     margin: 30px 0;
-    font-size: 3.8rem;
+    font-size: 3.6rem;
     font-weight: bold;
     color:black;
 }
@@ -44,6 +43,33 @@ li span {
 @media screen and(min-width:767px) {
     .promoContainer {
         padding: 80px 9rem;
+    }
+}
+@media screen and(min-width:1024px) {
+    .promoContainer  {
+        display: flex;
+        flex-direction: row-reverse;
+        padding: 0 0;
+        padding: 3rem 0 4.5rem 3rem ;
+    }
+    .promoDescription {
+        width: 50%;
+        //background-color: pink;
+    }
+    .promoImage {
+        // background-color: lightblue;
+        //max-width: 500px;
+        margin: auto 0;
+        width: 50%;
+    }
+
+}
+@media screen and(min-width:1200px) {
+    .promoDescription {
+        width: 60%;
+    }
+    .promoImage {
+        width: 40%;
     }
 }
 
